fix(navigation): fix breakpoint order and z-index

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -19,8 +19,19 @@ $component: 'cmp-navigation';
         top: 0;
         left: 0;
         transform: translateX(-100%);
+        z-index: 998;
 
         @include use-breakpoint(mini-tablet) {
+            height: 45px;
+            position: relative;
+            background: $color-white1;
+            border-bottom: 1px rgba($color-grey1, .3) solid;
+            transform: none;
+            overflow-y: hidden;
+            opacity: 1;
+        }
+
+        @include use-breakpoint(desktop) {
             padding-left: $grid-desktop-padding;
             padding-right: $grid-desktop-padding;
         }
@@ -30,6 +41,13 @@ $component: 'cmp-navigation';
     &__item {
         width: 100%;
         flex: 1;
+    }
+
+    &__list {
+        @include use-breakpoint(mini-tablet) {
+            flex-direction: row;
+            align-items: flex-start;
+        }
     }
 
     &__item {
@@ -42,54 +60,8 @@ $component: 'cmp-navigation';
         &--active {
             color: $color-white1;
         }
-    }
 
-    @for $i from 1 through 10 {
-        &__item:nth-child(#{$i}) {
-            transition-delay: #{($i - 1) * 0.08}s
-        }
-    }
-
-    &__link {
-        width: 100%;
-        height: 100%;
-        color: inherit;
-    }
-
-    &__text {
-        @include use-text(code);
-        opacity: .5;
-
-        &::before {
-            content: '<';
-        }
-
-        &::after {
-            content: ' />';
-        }
-    }
-
-    &__item--active &__text {
-        opacity: 1;
-    }
-
-    @include use-breakpoint(mini-tablet) {
-        &__wrapper {
-            height: 45px;
-            position: relative;
-            background: $color-white1;
-            border-bottom: 1px rgba($color-grey1, .3) solid;
-            transform: none;
-            overflow-y: hidden;
-            opacity: 1;
-        }
-
-        &__list {
-            flex-direction: row;
-            align-items: flex-start;
-        }
-
-        &__item {
+        @include use-breakpoint(mini-tablet) {
             flex: 1;
             height: 50px;
             padding: 0 10px 5px;
@@ -116,12 +88,46 @@ $component: 'cmp-navigation';
                 color: $color-primary;
             }
         }
+    }
 
-        @for $i from 1 through 10 {
+    @for $i from 1 through 10 {
+        &__item:nth-child(#{$i}) {
+            transition-delay: #{($i - 1) * 0.08}s
+        }
+
+        @include use-breakpoint(mini-tablet) {
             &__item:nth-child(#{$i}) {
                 transition-delay: 0s;
             }
         }
+    }
+
+    &__link {
+        width: 100%;
+        height: 100%;
+        color: inherit;
+    }
+
+    &__text {
+        @include use-font(monospace);
+        font-size: 18px;
+        opacity: .5;
+
+        &::before {
+            content: '<';
+        }
+
+        &::after {
+            content: ' />';
+        }
+
+        @include use-breakpoint(mini-tablet) {
+            font-size: 15px;
+        }
+    }
+
+    &__item--active &__text {
+        opacity: 1;
     }
 }
 
